# mlops-tools-tutorials

./: README.md
tools/poetry/my_project/: pyproject.toml
tools/poetry/plotly_dash/: pyproject.toml  requirements.txt
tools/poetry/random_quote/: pyproject.toml
tools/poetry/random_quote/random_quote/: main.py
