[tool.poetry]
name = "plotly-dash"
version = "0.1.0"
description = ""
authors = ["sermengi <mengiserkan@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
dash = "2.9.1"
dash-bootstrap-components = "1.4.1"
gunicorn = "20.1.0"
python-dotenv = "1.0.0"
geopandas = "0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
