[tool.poetry]
name = "random-quote"
version = "0.1.0"
description = ""
authors = ["sermengi <mengiserkan@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
random_quote = 'random_quote.main:main'
